<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_cadastrar_praia"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textColor="#121E88"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/hint_nome_da_praia"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/hint_cidade"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/hint_estado"
        android:inputType="text" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="16dp"
        android:backgroundTint="#121E87"
        android:text="@string/label_incluir"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:hint="@string/day" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="8dp"
        android:textColor="#000000"
        android:hint="@string/vini" />


</LinearLayout>